Rawdha is back